# robots-configuration

./: .gitignore  .gitpod.yml  CMakeLists.txt  CMakePresets.json  ChangeLog.txt  LICENSE  README.md  all_robots.xml
.devcontainer/: devcontainer.json
.githooks/: post-commit  pre-commit
.github/: CONTRIBUTING.md  local-workflow-tech.md
CER01/: CER.xml  CMakeLists.txt  general.xml
CER02/: CER.xml  CER_Laser_backonly.xml  CER_Laser_frontonly.xml  CER_doubleLaser_only.xml  CMakeLists.txt  cer.urdf  general.xml  yarplaserscannergui.ini
CER03/: CER.xml  CER_hands_only.xml  general.xml
CER04/: CER.xml  CER_base.xml  CER_hands_only.xml  CER_mc_no_hands.xml  CER_mc_only_no_hands.xml  CMakeLists.txt  general.xml  robotStatePublisher.launch  yarpmotorgui.ini
R1SN000/: CER.xml  CMakeLists.txt  cer.urdf  general.xml  yarprobotinterface.ini
R1SN001/: CER.xml  CER_Laser_backonly.xml  CER_Laser_frontonly.xml  CER_doubleLaser_only.xml  CER_noPSC.xml  CMakeLists.txt  general.xml  yarprobotinterface.ini
R1SN002/: CER.xml  CER_hands_only.xml  CER_mc_no_hands.xml  CMakeLists.txt  cer.urdf  general.xml  yarpmotorgui.ini
R1SN003/: CER-ros1.xml  CER-ros2.xml  CER.xml  CER_mc_no_hands.xml  CER_mc_only_no_hands.xml  CMakeLists.txt  R1.xml  Upperbody-tmp.xml  fw_notes.txt  realsense2.xml  yarpmotorgui.ini  yarprobotinterface.ini
R1SN003new/: CER.xml  CER_base.xml  CER_mc_no_hands.xml  CER_mc_only_no_hands.xml  CMakeCache.txt
R1SN003nws/: CER.xml  CER_base.xml  CER_hands_only.xml  CMakeLists.txt  cer.urdf  general.xml  network.CER04.txt  robotStatePublisher.launch
SkinFingertipDemo/: CMakeLists.txt  skinFingertipDemo.xml
SkinTableTop/: CMakeLists.txt  skintabletop.xml
conf_ergocub_head/: general.xml  head.poshead  head.xml  launch-telemetry.xml  pitch.poshead  plot_data.m  roll.poshead  yarpmotorgui.ini  yarprobotinterface.ini
ergoCubSN000/: #ergocub_wbd.xml#  CMakeLists.txt  battery_test.xml  cartesianSolver.ini  custom_positions.ini  ergocub.xml  ergocub_all.xml  ergocub_all_ros2.xml  ergocub_head.xml  ergocub_wbd.xml  ergocub_wbd.xml.save  ergocub_wbd_no_right_forearm.xml  ergocub_wbd_ros2.xml  ft.xml  general.xml  head-imu.xml  head.xml  head_sensors.xml  la.xml  la_nohands.xml  la_upper_no_wrist_no_hand.xml  legs.xml  ll.xml  ls.xml  ra.xml  ra_nohands.xml  rl.xml  rs.xml  sensors.xml  sensors_ros2.xml  shoulders.xml  torso.xml  torso_head.xml  yarpmotorgui.ini  yarprobotinterface.ini
ergoCubSN001/: CMakeLists.txt  battery_test.xml  custom_positions.ini  ergocub.xml  ergocub_all.xml  ergocub_all_ros2.xml  ergocub_wbd.xml  ergocub_wbd_ros2.xml  ft.xml  general.xml  head-imu.xml  head.xml  la.xml  legs.xml  ll.xml  network.ergoCubSN000.xml  network.ergoCubSN001-2foc-special.xml  network.ergoCubSN001.xml  ra.xml  realsense2.xml  rl.xml  sensors.xml  sensors_ros2.xml  skin.xml  torso.xml  yarprobotinterface.ini
ergoCubSN002/: CMakeLists.txt  battery_test.xml  custom_positions.ini  ergocub.xml  ergocub_all.xml  ergocub_all_ros2.xml  ergocub_wbd.xml  ergocub_wbd_ros2.xml  ft.xml  general.xml  head-imu.xml  head.xml  la.xml  legs.xml  ll.xml  network.ergoCubSN002-2foc.xml  network.ergoCubSN002.xml  ra.xml  realsense2.xml  rl.xml  sensors.xml  sensors_ros2.xml  skin.xml  torso.xml
ergoCubSN003/: CMakeLists.txt  battery_test.xml  ergocub.xml  ft.xml  general.xml  network.ergoCubSN002.xml  network.ergoCubSN003.xml  realsense2.xml  sensors.xml  sensors_ros2.xml  skin.xml  test_head_only.xml  test_lowerbody.xml  test_upperbody_nohead.xml  yarpmotorgui.ini  yarprobotinterface.ini
experimentalSetups/wristMK2.1_SN002F/sequences/log-wrist-joints/: CMakeLists.txt  README.md
experimentalSetups/wristMK2.1_SN002F/sequences/log-wrist-joints/src/: main.cpp
experimentalSetups/wristMK2.1_SN002F/sequences/log-wrist-joints/utils/: roll-trajectory.poswrist_mc  yscope.xml
iCubAberystwyth01/: CMakeLists.txt  general.xml  icub_all.xml
iCubAbuDhabi01/: CMakeLists.txt  config.txt  firmwareUpdate.txt  general.xml  iCub_Calibration.xls  iKinGazeCtrl.ini  icubEyes.ini  icub_all.xml
iCubAnkara01/: .~lock.iCub_Calibration_Ankara01.xls#  CMakeLists.txt  general.xml  icub_all.xml
iCubBarcelona01/: CMakeLists.txt  general.xml  iKinGazeCtrl.ini  icubEyes.ini  icub_all.xml  icub_nolegs.xml
iCubBielefeld01/: CMakeLists.txt
iCubBielefeld02/: CMakeLists.txt
iCubBielefeld03/: CMakeLists.txt  general.xml  icub_all.includearm  icub_all.xml
iCubChemnitz01/: CMakeLists.txt  cartesianSolver.ini  general.xml  iKinGazeCtrl.ini  icub_RA_head.xml  icub_all.xml  icub_all_noCalibrators.xml  icub_analog_only.xml  icub_head.xml  network.iCubChemnitz01.xml  yarprobotinterface.ini
iCubChemnitz01-test/: firmwareUpdate.txt  firmwareupdater.ini  iCub_Calibration_V2_0_Template01.xls  icub_all.xml  icub_head.xml
iCubDaejeon01/: CMakeLists.txt  general.xml  icub_all.xml
iCubDarmstadt01/: CMakeLists.txt  general.xml  icub_all.xml  icub_all_without_skin_legs.xml  icub_no_legs.xml
iCubDijon01/: .~lock.iCub_Calibration_V1_3_1_iCubDijon01.xls#  CMakeLists.txt  head.xml  iCub_Calibration_V1_3_1_iCubDijon01.xls  icubEyes.ini  icub_all.xml  icub_ikart.xml  la.xml  ll.xml  lower_body.xml  ra.xml  rl.xml  torso.xml  upperbody.xml
iCubEdinburgh01/: CMakeLists.txt  general.xml  iKinGazeCtrl.ini  icub_all.xml  icub_all_inertials.xml  la.xml  network.iCubEdinburgh01.xml  ra.xml  torso.xml  yarpmotorgui.ini
iCubErzelli01/: CMakeLists.txt  config.txt  general.xml  head.xml  icub_all.xml  icub_all_inertials.xml  la.xml  legs.xml  ll.xml  network.iCubErzelli01.xml  nosens.xml  ra.xml  rl.xml  skin.xml  torso.xml
iCubErzelli02/: CMakeLists.txt  general.xml  head.xml  icubEyes.ini  icubEyes_640x480.ini  icub_all.xml  icub_all_inertials.xml  la.xml  ll.xml  network.iCubErzelli02.xml  original_icub_all.xml  ra.xml  rl.xml  upper.xml  (+1 more)
tests/check-xml/check-nws-nwc-xml/: CMakeLists.txt
tests/dry-run/check-xml/: CMakeLists.txt
tests/dry-run/check-xml/schemas/: calibrators.xsd  calibrators1.xsd  cartesian_arms.xsd  cartesian_legs.xsd  remapper.xsd  wrapper.xsd
tests/dry-run/check-xml/src/: check-xml.cpp
(+9968 files in other folders)
